--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=xjtucad
 spring.datasource.password=xjtucad
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 mybatis.type-aliases-package=cn.edu.xjtu.cad.templates.model
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
