-重写工作流控制页面

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.password=xjtucad
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 mybatis.type-aliases-package=cn.edu.xjtu.cad.templates.model
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+#¥Ú”°sql”Ôæ‰
+logging.level.cn.edu.xjtu.cad.templates.dao=DEBUG
+spring.jmx.enabled=false
+spring.aop.auto=true
