--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 logging.level.cn.edu.xjtu.cad.templates.dao=DEBUG
 spring.jmx.enabled=false
 spring.aop.auto=true
+spring:
+    freemarker:
+        template-loader-path:classpath:/templates/
+        suffix:.ftl
+        content-type:text/html
+        charset:UTF-8
+        settings:
+        number_format:'0.##'
