--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.url=jdbc:mysql://innovation.xjtu.edu.cn:3306/innovation_templates?serverTimezone=GMT
 spring.datasource.username=xjtucad
 spring.datasource.password=xjtucad
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 mybatis.type-aliases-package=cn.edu.xjtu.cad.templates.model
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
-#´òÓ¡sqlÓï¾ä
+#ï¿½ï¿½Ó¡sqlï¿½ï¿½ï¿½
 logging.level.cn.edu.xjtu.cad.templates.dao=DEBUG
 spring.jmx.enabled=false
 spring.aop.auto=true
