--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,16 @@
         </dependency>
     </dependencies>
 
+
+    <repositories>
+        <repository>
+            <id>alimaven</id>
+            <name>aliyun maven</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+
+    </repositories>
+
     <build>
         <plugins>
             <plugin>
